--- a/app/views/home/event_publishing.html.erb
+++ b/app/views/home/event_publishing.html.erb
@@ -6,15 +6,10 @@
 </style>
 
 <h1>About Event Publishing</h1>
-On the BAMRU website, we publish a schedule with all of our Meetings, Trainings, and Special Events.<p></p>
-These events are also loaded into our Google calendar.<p></p>
-Additionally, we publish a summary of BAMRU Operations on our website.<p></p>
-The permission rules for creating and publishing events are as follows:
-<ul>
-  <li>only a moderator can create/edit/publish a Meeting, Training, or Special Event</li>
-  <li>anyone can create/edit an Operation</li>
-  <li>only a moderator can publish an Operation</li>
-  <li>once an Operation is published, only a moderator can edit the Operation</li>
-</ul>
-<p> </p>
+On the BAMRU website, we publish a <a href="http://bamru.org/calendar" target="_blank">calendar</a> with all of our Meetings, Trainings, and Community Events.<p></p>
+These events are also loaded into our Google calendar,
+and we publish a summary of <a href="http://bamru.org/operations" target="_blank">BAMRU Operations</a>
+on our website.<p></p>
+Only 'published' events are distributed on our public websites.  You can change the 'published' status when you edit an event.<p></p>
+Any member can create/edit/delete any event.  Edit with care!<p></p>
 
