updated doc page for ChromeFrame

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
   <div style='text-align: center; margin: 60px; font-size: 22px;'>
     On IE, this page requires the ChromeFrame Plugin.
     <p style='height: 25px;'></p>
-    <a href="/home/chrome-frame">Learn more...</a>
+    <a href="/home/chrome_frame">Learn more...</a>
   </div>
 <% else %>
   <div id=x_container>
