--- a/app/views/home/chrome_frame.html.erb
+++ b/app/views/home/chrome_frame.html.erb
@@ -1,4 +1,24 @@
-<h3>Chrome Frame</h3>
-<p></p>
-ChromeFrame is required on IE.<p></p>
-<a href="http://www.google.com/chromeframe" target="_blank">Install ChromeFrame</a>
+<div style='width: 450px; text-align: left; margin: 40px 0 60px 200px;'>
+
+  <h3>Chrome Frame</h3>
+  <p></p>
+  BAMRU.net uses HTML5, which has been available for a
+  couple of years already on Chrome and Firefox, but still does not work on IE.<p></p>
+
+  The workaround for IE users is to install a plugin called ChromeFrame.  This plugin
+  takes about a minute to install, and runs our HTML5 features beautifully.
+
+  Find ChromeFrame at
+  <a href="http://www.google.com/chromeframe" target="_blank">http://www.google.com/chromeframe</a>.
+  <p></p>
+
+  Please install ChromeFrame and then test it.  Let me know if you run into any technical or corporate
+  roadblocks with ChromeFrame.<p></p>
+
+  Thanks, Andy Leak - andy@r210.com - 650-823-0836<p></p><br/>
+
+  PS: All of BAMRU.net will run <i>without</i> ChromeFrame <i>except</i> the Events page.  But
+  over time, I plan to add more and more HTML5 features.  So the sooner we get everyone on
+  ChromeFrame, the better.<p></p>
+
+</div>
