--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -29,8 +29,10 @@
       <input type='submit' value="Upload File" />
     </form>
     <p></p>
-    Note: On browsers like Chrome and Firefox, you can crop your photo so that
-    your picture will fix perfectly on our roster page.
+    <b>Note:</b> On Chrome and Firefox, you can crop your photo so that
+    your picture will fix perfectly on our roster page.<br/>
+    Cropping also works if you install the <a href="/home/chrome_frame" target="_blank">ChromeFrame</a> plugin
+    on your IE browser.
   </div>
   <div id='webkitBrowser' style='text-align: left; display: none;'>
     <table width=100%>
