--- a/app/views/home/event_publishing.html.erb
+++ b/app/views/home/event_publishing.html.erb
@@ -6,10 +6,13 @@
 </style>
 
 <h1>About Event Publishing</h1>
-On the BAMRU website, we publish a <a href="http://bamru.org/calendar" target="_blank">calendar</a> with all of our Meetings, Trainings, and Community Events.<p></p>
-These events are also loaded into our Google calendar,
+On the BAMRU website, we publish a <a href="http://bamru.org/calendar" target="_blank">calendar</a> with all
+of our Meetings, Trainings, and Community Events.<p></p>
+These events are also loaded into our
+<a href="https://www.google.com/calendar/embed?src=bamru.staging%40gmail.com&ctz=America/Los_Angeles">Google calendar</a>,
 and we publish a summary of <a href="http://bamru.org/operations" target="_blank">BAMRU Operations</a>
 on our website.<p></p>
 Only 'published' events are distributed on our public websites.  You can change the 'published' status when you edit an event.<p></p>
+When you edit an event, it takes a minute or so for the changes to be reflected on the Google Calendar and on our public website.<p></p>
 Any member can create/edit/delete any event.  Edit with care!<p></p>
 
