--- a/app/views/monitor/index.html.erb
+++ b/app/views/monitor/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>System Monitor</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
-  <link rel="stylesheet" href="/assets/mobile3.css" type="text/css">
+  <link rel="stylesheet" href="/assets/mobile.css" type="text/css">
   <link rel="stylesheet" href="/assets/monitor.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
