first prototype for meeting signup

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -55,4 +55,17 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
   </tr>
 </table>
+<p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Meeting Sign In</h3>
+<table>
+  <tr>
+    <td width=500>
+      Raw mockup for a Meeting Sign In app.  Runs on Smartphones & iPad.<br/>
+      Registers Members & new Guests. Takes a profile photo.<br/>
+    </td>
+    <td valign='middle' style='padding-left: 40px;'>
+      <%= link_to meeting_signin_url, meeting_signin_path %>
+    </td>
+  </tr>
+</table>
 
