--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -3,6 +3,19 @@
 These prototypes are for learning new software tools and techniques.  They are not feature-complete.<br/>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Meeting Sign In</h3>
+<table>
+  <tr>
+    <td width=500>
+      A Meeting Sign In app. Runs on Smartphones & iPad.<br/>
+      Registers Members & new Guests.<br/>
+    </td>
+    <td valign='middle' style='padding-left: 40px;'>
+      <%= link_to meeting_signin_url, meeting_signin_path %><br/>
+      <%= link_to "Meeting Sign-In Sheet with QR code", "http://bamru.net/files/Meeting_Sign-In.pdf" %>
+    </td>
+  </tr>
+</table>
 <h3 width=100% style='background: grey; padding: 3px; color: white;'>Events</h3>
 <table>
   <tr>
@@ -56,16 +69,4 @@ Let Andy know if you spot problems or have ideas for improvement.
   </tr>
 </table>
 <p></p>
-<h3 width=100% style='background: grey; padding: 3px; color: white;'>Meeting Sign In</h3>
-<table>
-  <tr>
-    <td width=500>
-      Raw mockup for a Meeting Sign In app.  Runs on Smartphones & iPad.<br/>
-      Registers Members & new Guests. Takes a profile photo.<br/>
-    </td>
-    <td valign='middle' style='padding-left: 40px;'>
-      <%= link_to meeting_signin_url, meeting_signin_path %>
-    </td>
-  </tr>
-</table>
 
