--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,10 +78,11 @@
             <td valign="top" bgcolor="white">
               <table width=100%>
                 <tr>
-                  <td width=25% align=center><b><a target='_blank' href="http://health.groups.yahoo.com/group/BAMRU">Forum</a></b></td>
-                  <td width=25% align=center><b><a target='_blank' href="/home/wiki">Wiki</a></b></td>
-                  <td width=25% align=center><b><%= link_to "Files", '/files'         %></b></td>
-                  <td width=25% align=center><b><%= link_to "Labs",  '/home/labs' %></b></td>
+                  <td width=20% align=center><b><a target='_blank' href="http://health.groups.yahoo.com/group/BAMRU">Forum</a></b></td>
+                  <td width=20% align=center><b><a target='_blank' href="/home/wiki">Wiki</a></b></td>
+                  <td width=20% align=center><b><%= link_to "Guests", '/guests'    %></b></td>
+                  <td width=20% align=center><b><%= link_to "Files",  '/files'     %></b></td>
+                  <td width=20% align=center><b><%= link_to "Labs",   '/home/labs' %></b></td>
                 </tr>
               </table>
             </td>
