changed mobile3 to mobile

--- a/app/views/meeting_signin/index.html.erb
+++ b/app/views/meeting_signin/index.html.erb
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 
     <% if @is_ipad %>
-      <script src="/assets/mobile3/iscroll.js"></script>
+      <script src="/assets/mobile/iscroll.js"></script>
     <% end %>
 
     <%= csrf_meta_tags %>
