--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="/assets/mobile3/application.js"></script>
+  <script src="/assets/mobile/application.js"></script>
   <% if @is_ipad %>
-    <script src="/assets/mobile3/iscroll.js"></script>
+    <script src="/assets/mobile/iscroll.js"></script>
   <% end %>
   <script>
     window.myID          =  parseInt("<%= current_member.id %>");
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <form action='/mobile3/send_page' method='POST'>
+    <form action='/mobile/send_page' method='POST'>
       <input name='authenticity_token' type='hidden' value="<%= form_authenticity_token %>"/>
       <div id='page_select' class='page'>
 
