--- a/app/assets/stylesheets/mobile_ui.css.scss
+++ b/app/assets/stylesheets/mobile_ui.css.scss
@@ -1,10 +1,4 @@
-/* ----- page ----- */
-
-body {
-  text-align: center;
-  background: #b0acac;
-  font-family: arial, sans-serif;
-}
+@import 'mobile_base.css.scss';
 
 /* ----- header ----- */
 
