--- a/app/assets/stylesheets/mobile_base.css.scss
+++ b/app/assets/stylesheets/mobile_base.css.scss
@@ -52,83 +52,77 @@ html, body {
   padding: 0;
 }
 
-//.footer {
-//  margin-top: 10px;
-//  padding: 5px;
-//  background: darkgray;
-//}
-
 /* ----- header ----- */
 
-//header {
-//
-//  //z-index: 2;
-//  top: 0;
-//  left: 0;
-//  width: 100%;
-//  height: 53px;
-//  background: black;
-//  border-bottom: 2px solid;
-//  border-bottom-color: #ff0000;
-//
-//  #title {
-//    width: 100%;
-//    display: -webkit-box;
-//    -webkit-box-orient: horizontal;
-//    display: -moz-box;
-//    -moz-box-orient: horizontal;
-//    display: box;
-//    box-orient: horizontal;
-//    padding-top: 18px;
-//    padding-bottom: 15px;
-//  }
-//
-//  .bookend {
-//    text-align: left;
-//    width: 60px; }
-//
-//  #label {
-//    color: white;
-//    font-size: 14pt;
-//    -webkit-box-flex: 1;
-//    -moz-box-flex: 1;
-//    box-flex: 1;
-//  }
-//
-//  #backlink {
-//    text-align: left; }
-//
-//  .back {
-//    text-decoration: none;
-//    color:  black;
-//    border: 1px solid black;
-//    background: white;
-//    margin: 10px;
-//    padding: 10px;
-//    border-radius: 10px;
-//    -moz-border-radius: 10px;
-//    -webkit-border-radius: 10px; }
-//}
+header {
+
+  //z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 53px;
+  background: black;
+  border-bottom: 2px solid;
+  border-bottom-color: #ff0000;
+
+  #title {
+    width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    display: -moz-box;
+    -moz-box-orient: horizontal;
+    display: box;
+    box-orient: horizontal;
+    padding-top: 18px;
+    padding-bottom: 15px;
+  }
+
+  .bookend {
+    text-align: left;
+    width: 60px; }
+
+  #label {
+    color: white;
+    font-size: 14pt;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    box-flex: 1;
+  }
+
+  #backlink {
+    text-align: left; }
+
+  .back {
+    text-decoration: none;
+    color:  black;
+    border: 1px solid black;
+    background: white;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px; }
+}
 
 /* ----- content ----- */
 
-//.content {
-//  z-index: 1;
-//  margin-left: 10px;
-//  margin-right: 10px;
-//}
+.content {
+  z-index: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
 /* ----- table styling ----- */
 
-//.mobile_table td {
-//  padding: 2px;
-//}
-//
-//.mobile_table tr>:first-child {
-//  font-weight: bold;
-//  text-align: right;
-//}
-//
+.mobile_table td {
+  padding: 2px;
+}
+
+.mobile_table tr>:first-child {
+  font-weight: bold;
+  text-align: right;
+}
+
 //.rosterTable tr:nth-child(odd)   { background-color: #9b9b9b;  }
 //.rosterTable tr:nth-child(even)  { background-color: #ababab;  }
 //.rosterTable td {
@@ -138,18 +132,18 @@ html, body {
 
 /* ----- content styling ----- */
 
-//.page {
-//  text-align: left;
-//  margin: 0;
-//  margin-top: 10px;
-//  padding-left: 10px;
-//  padding-right: 10px;
-//  padding-bottom: 10px;
-//}
-//
-//.page > li {
-//  list-style-type: none;
-//}
+.page {
+  text-align: left;
+  margin: 0;
+  margin-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+.page > li {
+  list-style-type: none;
+}
 
 /* ----- nav links and dividers ----- */
 
@@ -243,23 +237,6 @@ html, body {
 //  color: white;
 //}
 
-/* ----- form elements ----- */
-
-//.checklist > label {
-//  display: block;
-//  background: white;
-//  border: 1px solid black;
-//  padding: 10px;
-//  margin-bottom: 1px;
-//}
-//
-//textarea {
-//  width: 100%;
-//}
-//
-//.textarea_wrapper {
-//}
-
 /* ----- one-off styling ----- */
 
 //.photo_icon { margin-right: 10px;    }
@@ -267,26 +244,16 @@ html, body {
 
 /* ----- utility styles ----- */
 
-//.data {
-//  padding-left: 10px;
-//  margin-top: 10px;
-//}
-//
-//.center {
-//  text-align: center;
-//  padding-top: 50px;
-//}
-//
-//.center-text {
-//  text-align: center;
-//}
-//
-//#state {
-//  float: left;
-//  margin-left: 15px;
-//}
-//
-//#update {
-//  float: right;
-//  margin-right: 15px;
-//}
+.data {
+  padding-left: 10px;
+  margin-top: 10px;
+}
+
+.center {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.center-text {
+  text-align: center;
+}
