--- a/app/assets/stylesheets/mobile_ui.css.scss
+++ b/app/assets/stylesheets/mobile_ui.css.scss
@@ -1,122 +1,13 @@
 @import 'mobile_base.css.scss';
 
-/* ----- header ----- */
+/* ----- footer ----- */
 
-header {
-  /*position: absolute;*/
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 53px;
-  background: black;
-  border-bottom: 2px solid;
-  border-bottom-color: #ff0000;
-}
-
-#title {
-  width: 100%;
-  display: -webkit-box;
-  -webkit-box-orient: horizontal;
-  display: -moz-box;
-  -moz-box-orient: horizontal;
-  display: box;
-  box-orient: horizontal;
-  padding-top: 18px;
-  padding-bottom: 15px;
-}
-
-#wrapper {
-  /*position: absolute;*/
-  /*z-index: 1;*/
-  /*top: 60px;*/
-  /*bottom: 0;*/
-  /*left: 0;*/
-  /*width: 100%;*/
-  /*overflow: auto;*/
-}
-
-.content {
-  z-index: 1;
-}
-
-.bookend {
-  text-align: left;
-  width: 60px; }
-
-#label {
-  color: white;
-  font-size: 14pt;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  }
-
-#backlink {
-  text-align: left; }
-
-.back {
-  text-decoration: none;
-  color: black;
-  border: 1px solid black;
-  background: white;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px; }
-
-/* ----- table styling ----- */
-
-.mobile_table td {
-  padding: 2px;
-}
-
-.mobile_table tr>:first-child {
-  font-weight: bold;
-  text-align: right;
-}
-
-/* ----- content styling ----- */
-
-.page {
-  text-align: left;
-  margin: 0;
-  margin-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-}
-
-.page > li {
-  list-style-type: none;
+.footer {
+  color: gray;
+  margin-top: 15px;
 }
 
 /* ----- nav links and dividers ----- */
-
-@mixin nav-base-style {
-  display: block;
-  margin-right: 10px;
-  margin-left:  10px;
-  margin-top:   10px;
-  padding: 20px;
-  text-decoration: none;
-  background: white;
-  color: black;
-  text-align: left;
-}
-
-@mixin nav-nowrap {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-@mixin radius($position: "") {
-  border#{$position}-radius: 15px;
-  -moz#{$position}-border-radius: 15px;
-  -webkit#{$position}-border-radius: 15px;
-}
 
 .photo_icon {
   margin-right: 10px;
@@ -260,52 +151,5 @@ header {
   font-size: 16px;
 }
 
-/* ----- checkboxes ----- */
-
-.checklist > label {
-  display: block;
-  background: white;
-  border: 1px solid black;
-  padding: 10px;
-  margin-bottom: 1px;
-}
-
-textarea {
-  width: 100%;
-}
-
-.textarea_wrapper {
-
-}
-
-/* ----- utility styles ----- */
-
-.data {
-  padding-left: 10px;
-  margin-top: 10px;
-}
-
-.center {
-  text-align: center;
-  padding-top: 50px;
-}
-
-.center-text {
-  text-align: center;
-}
-
-.footer {
-  color: gray;
-  margin-top: 15px;
-}
-
-#state {
-  float: left;
-  margin-left: 15px;
-}
-
-#update {
-  float: right;
-  margin-right: 15px;
-}
+/* ----- form elements ----- */
 
