--- a/app/views/notifier/page_email.html.erb
+++ b/app/views/notifier/page_email.html.erb
@@ -53,11 +53,7 @@ Mobile: <%= @opts['author_mobile'] %><br/>
  eMail: <%= @opts['author_email']  %><br/>
 <% end %>
 <hr>
-<% if @opts['prompt'].blank? %>
-Please reply to let others know you
-have read this message. Learn more at the
-<a href="http://wiki.bamru.net/index.php/Paging">BAMRU Wiki</a>
-<% else %>
+<% unless @opts['prompt'].blank? %>
 Please RSVP!  Learn more at the
 <a href='http://wiki.bamru.net/index.php/RSVPs'>BAMRU Wiki</a>
 <% end %>
