--- a/app/views/notifier/page_email.text.erb
+++ b/app/views/notifier/page_email.text.erb
@@ -10,11 +10,7 @@ Mobile: <%= @opts['author_mobile'] %>
   eMail: <%= @opts['author_email']  %>
 <% end %>
 -----------------------------------------
-<% if @opts['prompt'].blank? %>
-Please reply to let others know you
-have read this message. Learn more at
-http://wiki.bamru.net/index.php/Paging
-<% else %>
+<% unless @opts['prompt'].blank? %>
 Please RSVP!  Learn more at:
 http://wiki.bamru.net/index.php/RSVPs
 <% end %>
