added Meeting AARs

--- a/app/views/event_reports/smso_aar.html.erb
+++ b/app/views/event_reports/smso_aar.html.erb
@@ -90,7 +90,7 @@
   <tr>
     <td class='checkCell'></td>
     <td class='valueCell'>CEREMONIAL</td>
-    <td class='checkCell'></td>
+    <td class='checkCell'><%= event_checkbox('meeting') %></td>
     <td class='valueCell'>MEETING</td>
     <td class='checkCell'><%= event_checkbox('training') %></td>
     <td class='valueCell'>TRAINING</td>
