--- a/app/views/guests/_guest_form.html.erb
+++ b/app/views/guests/_guest_form.html.erb
@@ -2,14 +2,14 @@
 <%= gst.hidden_field :typ, value: 'G' %>
 <%=  gst.simple_fields_for :phones do |phn| %>
   <%= phn.input :number, label: "Mobile Number" %>
-  <%= phn.hidden_field :typ, value: 'mobile' %>
+  <%= phn.hidden_field :typ, value: 'Mobile' %>
 <% end %>
 <%=  gst.simple_fields_for :emails do |ema| %>
   <%= ema.input :address, label: "eMail Address" %>
-  <%= ema.hidden_field :typ, value: 'personal' %>
+  <%= ema.hidden_field :typ, value: 'Personal' %>
 <% end %>
 <%=  gst.simple_fields_for :addresses do |adr| %>
   <%= adr.input :zip, label: "Home Zip Code", required: false %>
-  <%= adr.hidden_field :typ, value: "home" %>
+  <%= adr.hidden_field :typ, value: "Home" %>
   <%= adr.hidden_field :is_guest, value: true %>
 <% end %>
