--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -13,7 +13,10 @@
         <td align=center width=33%>
           <%= link_to("Edit", edit_member_path(@member)) %>
           <% if current_member != @member %>
-            | <%= link_to("Delete", member_path(@member), :confirm => "Are you sure?", :method => :delete) %> <% end %>
+            <% if current_member.developer? %>
+            | <%= link_to("Delete", member_path(@member), :confirm => "Are you sure?", :method => :delete) %>
+            <% end %>
+          <% end %>
         </td>
         <% end %>
         <td align=right width=33%>
