--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -79,13 +79,13 @@
         </thead>
         <% @dists.each do |d| %>
           <tr>
-            <td><%= link_to(d.member.full_name, member_path(d.member)) %><%= raw message_oot_helper(d) %><%= raw message_bounce_helper(d) %></td>
+            <td><%= link_to(d.member.try(:full_name) || "", member_path(d.member || 0)) %><%= raw message_oot_helper(d) %><%= raw message_bounce_helper(d) %></td>
             <td align=center><%= d.updated_at.strftime("%m-%d %H:%M") %></td>
             <td align=center><%= raw yes_no_read d.read %></td>
-            <td align=center><%= raw rsvp_display_link(d) %></td>
+            <td align=center><%= raw rsvp_display_link(d) if d.member %></td>
             <td align=center>
               <%= link_to("history", history_path(d)) %> |
-              <%= link_to("inbox", member_inbox_index_path(d.member)) %>
+              <%= link_to("inbox", member_inbox_index_path(d.member || 0)) %>
             </td>
           </tr>
         <% end %>
