tweak alert mail formatting

--- a/app/views/notifier/_opts_table.html.erb
+++ b/app/views/notifier/_opts_table.html.erb
@@ -2,7 +2,7 @@
 <table>
   <% @opts.keys.each do |key| %>
       <tr>
-        <td><%= key %></td>
+        <td align=right><b><%= key %>:</b> </td>
         <td><%= @opts[key] %></td>
       </tr>
   <% end %>
