--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -67,7 +67,7 @@
                 <A href="<%= do_assignments_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <span class=small><i><%= avail_dos_link_next_quarter("Edit my Q#{next_quarter_number} DO availability") %></i></span><br><p>
                 <A  target='_blank' href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                <A  target='_blank' href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
+                <A  target='_blank' href='/home/event_publishing' class='small'><i>How to edit the public website calendar</i></A>
               </font>
             </td>
           </tr>
