--- a/config/deploy/shared/packages/templates/nginx_passenger.erb
+++ b/config/deploy/shared/packages/templates/nginx_passenger.erb
@@ -17,6 +17,11 @@ server {
   location @503 {
     rewrite ^(.*)$ /system/maintenance.html break;
   }
+  location ^~ /assets/ {
+    gzip_static on;
+    expires max;
+    add_header Cache-Control public;
+  }
   location / {
     proxy_pass http://127.0.0.1:<%= web_port %>;
     proxy_set_header Host $host;
